--- a/frontend/project2/src/App.css
+++ b/frontend/project2/src/App.css
@@ -1,5 +1,8 @@
+*{
+    font-family: 'Playfair Display', serif;
+}
 .home{
-    
+  margin: 5px;  
 }
 .justify-content-end{
     background-color: rgb(0, 0, 0);
@@ -53,4 +56,33 @@
     flex: 1 1 0px;
     margin: 70px;
 
+}
+
+.img44{
+    width: 100%;
+    height: 300px;
+}
+.TEAM {
+  height: 200px;
+  margin-top: 90px;
+}
+.ourname{
+    display: flex;
+    justify-content:space-evenly;
+    margin: 50px;
+    /* padding: 30px;    */
+}
+
+.ABOUT{
+    text-align: center;
+    margin-bottom: 240px;
+}
+.hometitel{
+    margin-bottom: 200px;
+}
+.Aboutcard{
+    margin: 150px;
+}
+.Aboutpag{
+    background-color: rgb(255, 245, 233);
 }
