--- a/frontend/project2/src/App.css
+++ b/frontend/project2/src/App.css
@@ -86,3 +86,19 @@
 .Aboutpag{
     background-color: rgb(255, 245, 233);
 }
+.logein{
+    margin-bottom: 200px;
+}
+.logeForm{
+    margin: 80px;
+    margin-left: 300px;
+}
+.loginput{
+   width: 500px;
+}
+.logbutton{
+  background-color: rgb(0, 0, 0);
+}
+.logepag{
+    background-color: rgb(255, 248, 239);
+}
