--- a/frontend/project2/src/App.css
+++ b/frontend/project2/src/App.css
@@ -1,5 +1,12 @@
-.home {
+.prodectList {
+  padding-bottom: 30%;
 }
+
+.imgFooter {
+  width: 40%;
+  padding: 1%;
+}
+
 .justify-content-end {
   background-color: rgb(0, 0, 0);
   /* opacity: 0.1; */
