--- a/frontend/project2/src/App.css
+++ b/frontend/project2/src/App.css
@@ -1,3 +1,20 @@
+.AdminAddItem {
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 3%;
+  padding-bottom: 5%;
+}
+.AddItemButtonSupmit {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
+
+.AddItemButtonSupmit:hover {
+  background-color: #555555;
+  color: white;
+}
+
 .cart {
   margin-bottom: 250px;
 }
