--- a/frontend/project2/src/App.css
+++ b/frontend/project2/src/App.css
@@ -1,4 +1,52 @@
+.masha{
+  margin-right: 30px;
+}
+.fineltotal{
+  margin-top: 60px;
+  margin-left: 100px;
+}
+.bill{
+  margin-top: 30px;
+}
+.omer{
+  margin-left: 70px;
+}
+.ahmad{
+  margin-left: 130px;
+}
+.quantitybutton{
+  width: 50px;
+  height: 30px;
+}
+.billprice{
+  margin-right: 30px;
+}
+.namecartbill{
+  margin-right: 80px;
+}
+.deletbill{
+  margin-left: 20px;
+  margin-top: 40px;
+}
+.cartbillll{
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  margin-left: 60px;
+  /* column-gap: 2px; */
+  /* gap: 100px; */
+}
+.Productcart{
+  margin-left: 220px;
+}
 
+
+.titles{
+  display: grid;
+  align-items: center;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  column-gap: 15px;
+}
 
 .navItem {
   color: rgba(255, 255, 255, 0.829);
@@ -77,6 +125,7 @@
 }
 .justify-content-end {
   background-color: rgb(0, 0, 0);
+  
   /* opacity: 0.1; */
 }
 .logo {
